# modulo

./: CMakeLists.txt  LICENSE  main.cpp
output_data/: .txt  data2.txt  program1.txt
process/: read_drive.cpp  read_drive.h
ui/: terminal_ui.cpp  terminal_ui.h
utils/: createFile.cpp  createFile.h  readFile.cpp  readFile.h  writeFile.h
utils/create/: createFile.cpp  createFile.h
utils/read/: readFile.cpp  readFile.h
utils/write/: writeFile.cpp  writeFile.h
